--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
+      # Spusti test casy
       - run: npm run test
       - run: npm run build
       - persist_to_workspace:
